feat: improve timetable exports
